[Browse] Display files as they come along

--- a/src/igz_controls/components/multiple-checkboxes/multiple-checkboxes.tpl.html
+++ b/src/igz_controls/components/multiple-checkboxes/multiple-checkboxes.tpl.html
@@ -129,7 +129,8 @@
                 {{ 'common:CANCEL' | i18next }}
             </button>
             <button class="igz-button-primary small"
-                    data-ng-click="$ctrl.onApply($event)">
+                    data-ng-click="$ctrl.onApply($event)"
+                    data-ng-disabled="$ctrl.isApplyButtonDisabled">
                 {{ 'common:APPLY' | i18next }}
             </button>
         </div>
