--- a/src/igz_controls/components/info-page/info-page-filters/info-page-filters.tpl.html
+++ b/src/igz_controls/components/info-page/info-page-filters/info-page-filters.tpl.html
@@ -18,12 +18,14 @@
                     tabindex="0"
                     data-ng-click="$ctrl.onResetFilters()"
                     data-ng-keydown="$ctrl.onResetFilters($event)"
+                    data-ng-disabled="$ctrl.isDisabled"
                     data-ng-if="$ctrl.resetFilters">{{ 'common:RESET' | i18next }}
             </button>
             <button class="igz-button-primary"
                     tabindex="0"
                     data-ng-click="$ctrl.onApplyFilters()"
                     data-ng-keydown="$ctrl.onApplyFilters($event)"
+                    data-ng-disabled="$ctrl.isDisabled"
                     data-ng-if="$ctrl.applyFilters">{{ 'common:APPLY' | i18next }}
             </button>
         </div>
