[Nuclio] Triggers: add default HTTP trigger & Service Type

--- a/src/igz_controls/components/more-info/more-info.less
+++ b/src/igz_controls/components/more-info/more-info.less
@@ -63,6 +63,7 @@
         font-size: 12px;
         font-weight: 400;
         white-space: pre-line;
+        line-height: normal;
         z-index: 9999;
 
         &::before {
