--- a/src/nuclio/common/components/collapsing-row/collapsing-row.less
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.less
@@ -58,7 +58,12 @@
 
         .item-name {
             font-weight: bold;
+            display: flex;
             width: 192px;
+
+            .text-ellipsis {
+                width: auto;
+            }
         }
 
         .item-class {
