--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -283,9 +283,12 @@
             .path {
                 display: flex;
                 align-items: center;
-                color: @cool-grey;
                 font-weight: bold;
                 margin-left: 22px;
+
+                .invocation-url {
+                    color: @cool-grey;
+                }
             }
 
             .default-dropdown {
