--- a/src/igz_controls/less/helpers.less
+++ b/src/igz_controls/less/helpers.less
@@ -233,3 +233,14 @@
         margin-left: 8px;
     }
 }
+
+.content-message-pane {
+    text-align: center;
+    width: 100%;
+    min-height: 50px;
+    margin: 10px 0;
+    padding: 14px 20px;
+    border: 1px solid #e1e0e5;
+    color: #474056;
+    font-size: 14px;
+}
