--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -77,7 +77,7 @@
                 display: inline-block;
                 padding-right: 14px;
 
-                &.fake-icon {
+                &.icon-placeholder {
                     &:before {
                         content: '';
                         display: inline-block;
