--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -148,7 +148,12 @@
             <div class="igz-action-panel">
                 <div class="actions-list">
                     <div class="igz-action-item"
-                         data-ng-click="$ctrl.onClickAction($ctrl.actions[0])">
+                         data-test-id="{{$ctrl.deleteTestId}}"
+                         data-ng-click="$ctrl.onClickAction($ctrl.actions[0])"
+                         data-uib-tooltip="{{$ctrl.actions[0].label}}"
+                         data-tooltip-popup-delay="1000"
+                         data-tooltip-placement="bottom"
+                         data-tooltip-append-to-body="true">
                         <span class="action-icon"
                               data-ng-class="$ctrl.actions[0].icon">
                         </span>
