Impl [Nuclio] Function introduce Healthy state

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
@@ -10,19 +10,19 @@
             <div class="ncl-status-light"
                  data-ng-if="item.status"
                  data-ng-class="{'ncl-status-ready': item.status === 'ready',
-                             'ncl-status-error': item.status === 'error',
+                             'ncl-status-error': item.status === 'error' || item.status === 'unhealthy',
                              'ncl-status-building': $ctrl.isFunctionBuilding(item.status)}">
 
                 <div class="ncl-status-tooltip"
                      data-ng-if="item.status"
                      data-ng-class="{'ncl-status-tooltip-ready': item.status === 'ready',
-                                 'ncl-status-tooltip-error': item.status === 'error',
+                                 'ncl-status-tooltip-error': item.status === 'error' || item.status === 'unhealthy',
                                  'ncl-status-tooltip-building': $ctrl.isFunctionBuilding(item.status)}">
 
                     <div class="ncl-status-icon"
                          data-ng-if="item.status !== 'not yet deployed'"
                          data-ng-class="{'ncl-icon-ready': item.status === 'ready',
-                                     'ncl-icon-error': item.status === 'error',
+                                     'ncl-icon-error': item.status === 'error' || item.status === 'unhealthy',
                                      'ncl-icon-building': $ctrl.isFunctionBuilding(item.status)}">
                     </div>
                     <div class="ncl-status-title">
