--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
@@ -104,4 +104,20 @@
             }
         }
     }
+
+    .building-status {
+        color: @pale-orange;
+    }
+
+    .error-status, .unhealthy-status {
+        color: @darkish-pink;
+    }
+
+    .standby-status, .scaled-to-zero-status {
+        color: @solid-grey;
+    }
+
+    .running-status {
+        color: @tealish;
+    }
 }
