Added imported status

--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
@@ -109,11 +109,14 @@
         color: @pale-orange;
     }
 
-    .error-status, .unhealthy-status {
+    .error-status,
+    .unhealthy-status {
         color: @darkish-pink;
     }
 
-    .standby-status, .scaled-to-zero-status {
+    .standby-status,
+    .scaled-to-zero-status,
+    .imported-status {
         color: @solid-grey;
     }
 
