Impl [Nuclio] Use consistent orange color for building status

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
@@ -60,7 +60,7 @@ ncl-navigation-tabs {
                     }
 
                     &.ncl-status-building {
-                        background-color: @sunflower-yellow;
+                        background-color: @pale-orange;
                     }
 
                     &.ncl-status-error {
@@ -103,10 +103,10 @@ ncl-navigation-tabs {
 
                         &.ncl-status-tooltip-building {
                             padding-left: 10px;
-                            background-color: @sunflower-yellow;
+                            background-color: @pale-orange;
 
                             &:after {
-                                border-right-color: @sunflower-yellow;
+                                border-right-color: @pale-orange;
                             }
                         }
 
