Impl [Nuclio] Align function states in Status tab header
Use the same text and colors in Status tab header just like in the
Status column in the functions list.

Also fix bug when getting 404 on PUT. Now will send POST and succeed.

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
@@ -36,7 +36,7 @@ ncl-navigation-tabs {
                     font-weight: bold;
                 }
 
-                &.ncl-status-monitoring {
+                &.ncl-status-indicator {
                     padding-right: 8px;
 
                     &:hover {
@@ -53,7 +53,7 @@ ncl-navigation-tabs {
                     height: 8px;
                     border-radius: 50%;
                     margin-left: 34px;
-                    background-color: @greyish-purple;
+                    background-color: @solid-grey;
 
                     &.ncl-status-ready {
                         background-color: @tealish;
@@ -76,7 +76,7 @@ ncl-navigation-tabs {
                         height: 24px;
                         padding: 4px 12px 22px 10px;
                         border-radius: 2px;
-                        background-color: @greyish-purple;
+                        background-color: @solid-grey;
                         color: @white;
 
                         &:after {
@@ -88,7 +88,7 @@ ncl-navigation-tabs {
                             width: 0;
                             margin-top: -5px;
                             border: 5px solid transparent;
-                            border-right-color: @greyish-purple;
+                            border-right-color: @solid-grey;
                             pointer-events: none;
                         }
 
