--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -73,6 +73,10 @@ h1, h2, h3, h4, h5, h6, .title, .btn {
     font-family: @font-family-sans-serif;
 }
 
+blockquote {
+    font: inherit;
+}
+
 ul, ol {
     margin: 0;
 
