[Nuclio] Invocation URL: N/A on error or not exposed, +info

--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.less
@@ -46,6 +46,18 @@
                     position: absolute;
                     right: 10px;
                 }
+
+                .igz-action-panel {
+                    &.invocation-tooltip {
+                        height: 36px;
+                        width: 56px;
+                    }
+
+                    .actions-more-info {
+                        position: fixed;
+                        z-index: 10;
+                    }
+                }
             }
         }
 
