--- a/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.less
+++ b/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.less
@@ -48,6 +48,18 @@
                     text-overflow: ellipsis;
                     min-width: 0;
                 }
+
+                .igz-action-panel {
+                    &.invocation-tooltip {
+                        height: 36px;
+                        width: 56px;
+                    }
+
+                    .actions-more-info {
+                        position: fixed;
+                        z-index: 10;
+                    }
+                }
             }
 
             .function-status {
