--- a/src/igz_controls/components/more-info/more-info.tpl.html
+++ b/src/igz_controls/components/more-info/more-info.tpl.html
@@ -13,7 +13,7 @@
         <div class="row-description"
              data-ng-if="$ctrl.isHtmlEnabled"
              data-ng-class="$ctrl.defaultTooltipPlacement"
-             data-ng-bind-html="$ctrl.description">
+             data-ng-bind-html="$ctrl.compiledDescription">
         </div>
         <div class="row-description"
              data-ng-if="!$ctrl.isHtmlEnabled"
@@ -21,7 +21,6 @@
             {{$ctrl.description}}
         </div>
     </div>
-
     <div data-ng-if="$ctrl.isDefaultTooltipEnabled">
         <div data-ng-if="!$ctrl.isHtmlEnabled"
              class="question-mark igz-icon-help-round"
@@ -34,7 +33,6 @@
              data-tooltip-trigger="$ctrl.trigger"
              data-tooltip-append-to-body="true">
         </div>
-
         <div data-ng-if="$ctrl.isHtmlEnabled"
              class="question-mark igz-icon-help-round"
              data-ng-class="{'disabled': $ctrl.isDisabled}"
