[Nuclio] Layout breaks on window resize with closed test pane

--- a/src/nuclio/functions/version/version-code/version-code.less
+++ b/src/nuclio/functions/version/version-code/version-code.less
@@ -15,7 +15,7 @@
         .ui-splitbar {
             background: @pale-grey;
 
-            a {
+            a, .ui-splitbar-icon {
                 display: none;
             }
         }
