Impl [Nuclio] Function: add indication for API gateway + name

--- a/src/nuclio/functions/version/version.less
+++ b/src/nuclio/functions/version/version.less
@@ -8,6 +8,11 @@
         z-index: 1000;
         position: relative;
 
+        .ncl-icon-api-gateway {
+            font-size: 20px;
+            line-height: 40px;
+        }
+
         .actions-buttons-block {
             margin-right: 22px;
 
