--- a/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.tpl.html
@@ -14,7 +14,14 @@
         </div>
         <ul class="dropdown-list" data-ng-scrollbars>
             <li data-ng-repeat="item in $ctrl.itemsList | filter: $ctrl.searchText">
-                <a class="item-name" data-ng-click="$ctrl.showDetails($event, item)">{{item.name}}</a>
+                <a class="item-name"
+                   data-ng-click="$ctrl.showDetails($event, item)"
+                   data-uib-tooltip="{{item.name}}"
+                   data-tooltip-popup-delay="200"
+                   data-tooltip-append-to-body="true"
+                   data-tooltip-placement="top">
+                    {{item.name}}
+                </a>
                 <span class="igz-icon-tick" data-ng-show="$ctrl.title === item.name"></span>
             </li>
         </ul>
