--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.less
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.less
@@ -2,7 +2,8 @@
     .ncl-version-volume {
         .common-table-header {
             border: none;
-            padding-left: 24px;
+            padding-left: 40px;
+            padding-right: 60px;
 
             .common-table-cell {
                 font-size: 14px;
@@ -17,6 +18,7 @@
 
                 .item-name {
                     width: 25%;
+                    padding-left: 0;
                 }
 
                 .item-class {
@@ -32,15 +34,16 @@
         .common-table-body {
             .ncl-collapsing-row .item-row {
                 .item-name {
-                    width: 22%;
+                    padding-left: 0;
+                    width: 25%;
                 }
 
                 .item-class {
-                    width: 18.5%;
+                    width: 20%;
                 }
 
                 .item-info {
-                    width: 58%;
+                    width: 55%;
                 }
             }
 
