Impl [Nuclio] Click project breadcrumb to go to Project screen
In Nuclio open-source it will enter the default nested tab, which is
currently "Functions".
It allows other consumers to redirect to an external project screen.

--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
@@ -8,7 +8,7 @@
 </span>
 
 <span class="main-header-title" data-ng-if="$ctrl.mainHeaderTitle.project.spec.displayName || $ctrl.mainHeaderTitle.project.metadata.name">
-    <span class="main-header-title-text" data-ng-click="$ctrl.goToFunctionsList()">
+    <span class="main-header-title-text" data-ng-click="$ctrl.goToProjectScreen()">
         {{$ctrl.mainHeaderTitle.project.spec.displayName || $ctrl.mainHeaderTitle.project.metadata.name}}
     </span>
 
