--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -150,7 +150,7 @@
 
             <div class="igz-col-45 attribute-field" data-ng-if="!$ctrl.isNil($ctrl.item.volumeMount.readOnly)">
                 <input type="checkbox" id="{{$ctrl.getItemName()}}" data-ng-model="$ctrl.item.volumeMount.readOnly">
-                <label for="{{$ctrl.getItemName()}}" class="asterisk">{{ 'common:READ_ONLY' | i18next }}</label>
+                <label for="{{$ctrl.getItemName()}}">{{ 'common:READ_ONLY' | i18next }}</label>
             </div>
 
             <div class="igz-col-45 attribute-field" data-ng-if="!$ctrl.isNil($ctrl.item.volume.secret.secretName)">
