[Services] Last service copy-to-clipboard menu is hidden

--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -140,8 +140,7 @@
         </div>
         <div class="three-dot-menu" data-ng-if="$ctrl.actions.length > 1 && !$ctrl.isDisabled">
             <igz-action-menu data-actions="$ctrl.actions"
-                             data-on-fire-action="$ctrl.onFireAction"
-                             data-list-class="$ctrl.listClass">
+                             data-on-fire-action="$ctrl.onFireAction">
             </igz-action-menu>
         </div>
         <div class="igz-action-panel" data-ng-if="$ctrl.actions.length === 1 && !$ctrl.isDisabled">
