--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -34,9 +34,9 @@
         margin-top: 9px;
         min-width: 129px;
         padding: 8px 0 0;
-        position: absolute;
-        right: 10px;
+        position: fixed;
         z-index: 10;
+        transform: translateX(-100%);
 
         .actions-list {
             cursor: default;
@@ -152,8 +152,6 @@
     }
 
     .upward-menu {
-        visibility: visible;
-        top: -55px;
-        right: 15px;
+       transform: translate(-100%, calc(-100% - 30px));
     }
 }
