--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -279,20 +279,7 @@
             height: 38px;
             padding: 0 23px;
 
-            .path {
-                display: flex;
-                align-items: center;
-                font-weight: bold;
-                margin-left: 22px;
-
-                .invocation-url {
-                    color: @cool-grey;
-                }
-            }
-
             .default-dropdown {
-                width: 97px;
-
                 .default-dropdown-field:not(:hover) {
                     border-color: transparent;
                 }
@@ -302,12 +289,18 @@
                 }
             }
 
+            .method-select {
+                max-width: 100px;
+            }
+
+            .invocation-urls-select {
+                flex: auto;
+            }
+
             .validating-input-field {
                 font-size: 14px;
-                margin-top: -2px;
 
                 .input-field {
-                    padding: 0 1px;
                     background-color: @pale-grey-three;
                 }
             }
