[Validating Input Field] Width flicker on value change

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -44,13 +44,14 @@
 
     .validation-icon,
     .validation-rule-icon {
+        width: 14px;
+        font-size: 11px;
+
         &.igz-icon-verify-ok {
-            font-size: 11px;
             color: @validation-icon-ok-color;
         }
 
         &.ncl-icon-close {
-            font-size: 10px;
             color: @validation-icon-close-color;
         }
     }
