--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -98,6 +98,11 @@
     }
 }
 
+.igz-icon-view {
+    .generateIconClass(99b);
+    font-size: 16px;
+}
+
 .igz-icon-tick-round {
     .generateIconClass(90a);
 }
