--- a/src/igz_controls/components/size/size.less
+++ b/src/igz_controls/components/size/size.less
@@ -81,6 +81,10 @@
         }
     }
 
+    .transparent {
+        opacity: 0;
+    }
+
     .igz-highcharts-wrapper {
         height: 40px;
         position: relative;
