IG-18847 - add N/A to External invocation URL + Tooltip

--- a/src/nuclio/functions/version/version-monitoring/version-monitoring.less
+++ b/src/nuclio/functions/version/version-monitoring/version-monitoring.less
@@ -30,6 +30,11 @@
                             padding: 0;
                         }
                     }
+                    .external-invocation-urls{
+                        .more-info-wrapper{
+                            height: auto;
+                        }
+                    }
                 }
 
                 &.without-collapse {
